# ai-devops

./: README.md
data/: api-registry.json  confirmations.json  contexts.json  memory.json  projects.json  states.json  tasks.json
nodejs/: ARCHITECTURE.md  README.md  index.js  package-lock.json  package.json
nodejs/lib/: api-registry.js  context-system.js  memory-system.js  notification.js  project-registry.js  security.js  state-system.js  task-system.js
nodejs/tests/: run-tests.js
nodejs/workers/: ai-worker.js  build-worker.js  deploy-worker.js  git-worker.js
rust/: Cargo.toml
rust/data/: contexts.json  memory.json  projects.json  states.json  tasks.json
rust/src/: main.rs
rust/src/models/: api.rs  context.rs  memory.rs  mod.rs  project.rs  state.rs  task.rs
rust/src/storage/: api_store.rs  context_store.rs  memory_store.rs  mod.rs  project_store.rs  state_store.rs  task_store.rs
